--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio - Professional Web Design & Development Agency</title>
+    <title>Web Studio Agency</title>
     <meta name="description" content="WebStudio is a professional web design and development agency creating stunning websites that convert. We offer web development, UI/UX design, SEO, and e-commerce solutions." />
     <meta name="author" content="WebStudio Team" />
 
